# kEngine

./: .gitignore  CMakeLists.txt  README.md
include/Camera/: Camera.hpp
include/Clock/: Clock.hpp  Time.hpp
include/Shader/: Shader.hpp
include/Utils/: FrameCounter.hpp  Vectors.hpp
include/Window/: State.hpp  Window.hpp
src/: main.cpp
src/Camera/: Camera.cpp
src/Clock/: Clock.cpp  Time.cpp
src/Shader/: Shader.cpp  Uniform.cpp
src/Utils/: FrameCounter.cpp
src/Window/: Position.cpp  Size.cpp  State.cpp  Title.cpp  Visible.cpp  Window.cpp
